# DayIDelta

./: .gitignore  .platform  ARCHITECTURE_GUIDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DayIDelta.py  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  README_Unity_Catalog.md  SCD2_CHATBOT_README.md  TRANSFORMATION_COMPLETE.md  chatbot_cli.py  chatbot_examples.py  cleanup_repository.sh  dayidelta_compat.py  example_improvements.py  integration_test.py  pyproject.toml  requirements.txt  scd2_chatbot.py  scd2_chatbot_old.py  test_chatbot.py  unity_catalog_example.py  unity_catalog_test.py
.github/workflows/: ci.yml
dayidelta/: __init__.py
dayidelta/agents/: __init__.py  chatbot.py  cli.py
dayidelta/core/: __init__.py  interfaces.py  models.py  scd2_engine.py
dayidelta/query/: __init__.py  generators.py  parsers.py  patterns.py
dayidelta/tests/: __init__.py
dayidelta/tests/test_agents/: __init__.py
dayidelta/tests/test_core/: __init__.py  test_scd2_engine.py
dayidelta/tests/test_platforms/: __init__.py
dayidelta/tests/test_query/: __init__.py  test_query_processing.py
dayidelta/utils/: __init__.py  validation.py
docs/: architecture.md  chatbot.md  faq.md  faq_archival_note.md  performance_design.md  unity_catalog.md
examples/notebooks/: notebook-content.py
